--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <body>
   <header>
     <div class="logo-container">
-      <img src="https://via.placeholder.com/150x50" alt="Logo Hotel Paraíso" id="logo">
+      <img src="LOGO.png" alt="Logo Hotel Paraíso" id="logo">
     </div>
     <div class="hotel-name"> 
       <h1>HOTEL El Paraíso</h1>
