--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
   <section id="galeria">
     <h2>Galería</h2>
     <div class="gallery">
-      <img src="https://via.placeholder.com/200" alt="Imagen 1">
-      <img src="https://via.placeholder.com/200" alt="Imagen 2">
-      <img src="https://via.placeholder.com/200" alt="Imagen 3">
+      <img src="./FOTO1.webp" alt="Imagen 1">
+      <img src="./FOTO2.webp" alt="Imagen 2">
+      <img src="./FOTO3.jpg" alt="Imagen 3">
     </div>
   </section>
 
