--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <body>
   <header>
     <div class="logo-container">
-      <img src="./LOGO.png" alt="Logo Hotel Paraíso" id="logo">
+      <img src="./logo.png" alt="Logo Hotel Paraíso" id="logo">
     </div>
     <div class="hotel-name"> 
       <h1>HOTEL El Paraíso</h1>
