--- a/habitaciones/habitaciones.html
+++ b/habitaciones/habitaciones.html
@@ -9,7 +9,6 @@
 <body>
   <header>
     <div class="logo-container">
-      <img src="https://via.placeholder.com/150x50" alt="Logo Hotel Paraíso" id="logo">
     </div>
     <nav>
       <ul>
@@ -27,7 +26,7 @@
     <!-- Habitaciones centradas -->
     <div class="room">
       <div class="room-image">
-        <img src="https://via.placeholder.com/300x200" alt="Habitación Estándar">
+        <img src="./H1.jpg" alt="Habitación Estándar">
       </div>
       <h3>Habitación Estándar</h3>
       <p>Confortable, ideal para una estadía corta. Esta habitación incluye cama matrimonial, baño privado y TV.</p>
@@ -36,7 +35,7 @@
 
     <div class="room">
       <div class="room-image">
-        <img src="https://via.placeholder.com/300x200" alt="Habitación Doble">
+        <img src="H2.jpg" alt="Habitación Doble">
       </div>
       <h3>Habitación Doble</h3>
       <p>Espaciosa, con dos camas individuales y vista al jardín. Perfecta para amigos o familiares.</p>
@@ -45,7 +44,7 @@
 
     <div class="room">
       <div class="room-image">
-        <img src="https://via.placeholder.com/300x200" alt="Suite de Lujo">
+        <img src="H3.jpg" alt="Suite de Lujo">
       </div>
       <h3>Suite de Lujo</h3>
       <p>Una experiencia única con jacuzzi privado, cama King size y una hermosa vista panorámica.</p>
