--- a/habitaciones/habitaciones.html
+++ b/habitaciones/habitaciones.html
@@ -12,10 +12,9 @@
     </div>
     <nav>
       <ul>
-        <li><a href="index.html#inicio">Inicio</a></li>
+        <li><a href="../index.html">Inicio</a></li>
         <li><a href="habitaciones.html">Habitaciones</a></li>
-        <li><a href="index.html#galeria">Galería</a></li>
-        <li><a href="index.html#contacto">Contacto</a></li>
+        <li><a href="../Galeria/galeria.html">Galería</a></li>
       </ul>
     </nav>
   </header>
