--- a/Galeria/galeria.html
+++ b/Galeria/galeria.html
@@ -16,7 +16,6 @@
         <li><a href="index.html#inicio">Inicio</a></li>
         <li><a href="habitaciones.html">Habitaciones</a></li>
         <li><a href="galeria.html">Galería</a></li>
-        <li><a href="index.html#contacto">Contacto</a></li>
       </ul>
     </nav>
   </header>
@@ -28,32 +27,32 @@
     <!-- Galería de imágenes -->
     <div class="gallery">
       <div class="gallery-item">
-        <img src="https://via.placeholder.com/300x200" alt="Piscina del Hotel">
+        <img src="./Piscina.webpm" alt="Piscina del Hotel">
         <p>Piscina</p>
       </div>
 
       <div class="gallery-item">
-        <img src="https://via.placeholder.com/300x200" alt="Restaurante del Hotel">
+        <img src="./Restaurante.jpeg" alt="Restaurante del Hotel">
         <p>Restaurante</p>
       </div>
 
       <div class="gallery-item">
-        <img src="https://via.placeholder.com/300x200" alt="Habitación del Hotel">
+        <img src="" alt="Habitación del Hotel">
         <p>Habitación</p>
       </div>
 
       <div class="gallery-item">
-        <img src="https://via.placeholder.com/300x200" alt="Gimnasio del Hotel">
+        <img src="Gim.jpeg" alt="Gimnasio del Hotel">
         <p>Gimnasio</p>
       </div>
 
       <div class="gallery-item">
-        <img src="https://via.placeholder.com/300x200" alt="Vista panorámica">
+        <img src="Vista.jpg" alt="Vista panorámica">
         <p>Vista panorámica</p>
       </div>
 
       <div class="gallery-item">
-        <img src="https://via.placeholder.com/300x200" alt="Lobby del Hotel">
+        <img src="Vista.jpg" alt="Lobby del Hotel">
         <p>Lobby</p>
       </div>
     </div>
