--- a/Galeria/galeria.html
+++ b/Galeria/galeria.html
@@ -13,8 +13,8 @@
     </div>
     <nav>
       <ul>
-        <li><a href="index.html#inicio">Inicio</a></li>
-        <li><a href="habitaciones.html">Habitaciones</a></li>
+        <li><a href="../index.html">Inicio</a></li>
+        <li><a href="../habitaciones/habitaciones.html">Habitaciones</a></li>
         <li><a href="galeria.html">Galería</a></li>
       </ul>
     </nav>
@@ -37,7 +37,7 @@
       </div>
 
       <div class="gallery-item">
-        <img src="" alt="Habitación del Hotel">
+        <img src="H1.jpg" alt="Habitación del Hotel">
         <p>Habitación</p>
       </div>
 
