--- a/Galeria/galeria.html
+++ b/Galeria/galeria.html
@@ -6,7 +6,7 @@
 <body>
   <header>
     <div class="logo-container">
-      <img src="https://via.placeholder.com/150x50" alt="Logo Hotel Paraíso" id="logo">
+      <img src="../logo.png" alt="Logo Hotel Paraíso" id="logo">
     </div>
     <div class="hotel-name"> 
       <h1>HOTEL El Paraíso</h1>
@@ -27,7 +27,7 @@
     <!-- Galería de imágenes -->
     <div class="gallery">
       <div class="gallery-item">
-        <img src="./Piscina.webpm" alt="Piscina del Hotel">
+        <img src="./Piscina.webp" alt="Piscina del Hotel">
         <p>Piscina</p>
       </div>
 
