--- a/Galeria/galeria.html
+++ b/Galeria/galeria.html
@@ -26,7 +26,7 @@
     <!-- Galería de imágenes -->
     <div class="gallery">
       <div class="gallery-item">
-        <img src="./Piscina.webp" alt="Piscina del Hotel">
+        <img src="./Pis.jpg" alt="Piscina del Hotel">
         <p>Piscina</p>
       </div>
 
